Updated german text

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ language:
     cta-link-text: "Download the Peakboard Designer for free"
   de:
     article-download-button-text: "Template herunterladen"
-    article-download-explanation: "Sie können diese Datei mit dem Peakboard Designer öffnen"
+    article-download-explanation: "Datei kann mit dem Peakboard Designer geöffnet werden"
     article-overview-title: "Overview"
     article-overview-description-title: "Description"
     article-overview-benefits-title: "Benefits"
