--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ language:
     homepage-all-category: "All"
     homepage-menu-title-category: "Categories"
     homepage-menu-title-data-sources: "Data Sources"
-    homepage-visible-categories: ["Administration","Andon","KPI","Lean Management","Logistics","OEE","Production","Scripting","Reception","Interaction"]
+    homepage-visible-categories: ["Administration","Andon","KPI","Lean Management","Logistics","OEE","Production","Scripting","Reception","Interaction", "Edge"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Get started for free!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
@@ -89,7 +89,7 @@ language:
     homepage-all-category: "Alle"
     homepage-menu-title-category: "Kategorien"
     homepage-menu-title-data-sources: "Datenquellen"
-    homepage-visible-categories: ["Administration","Andon","Empfang","KPI","Lean Management","Logistik","OEE / GAE","Produktion","Scripting","Interaktion"]
+    homepage-visible-categories: ["Administration","Andon","Empfang","KPI","Lean Management","Logistik","OEE / GAE","Produktion","Scripting","Interaktion", "Edge"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Kostenlos starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
@@ -134,7 +134,7 @@ language:
     homepage-all-category: "全部"
     homepage-menu-title-category: "类别"
     homepage-menu-title-data-sources: "数据源"
-    homepage-visible-categories: ["Administration","Andon","KPI","Lean Management","Logistics","OEE","Production","Scripting","Reception","Interaction"]
+    homepage-visible-categories: ["Administration","Andon","KPI","Lean Management","Logistics","OEE","Production","Scripting","Reception","Interaction", "Edge"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "马上开始"
     top-menu-cta-button-url: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
