--- a/_config.yml
+++ b/_config.yml
@@ -29,25 +29,25 @@ collections:
 # Portions of text found throughout common components (like the footer) can be configured here for each language
 language:
   en:
-    article-download-button-text: "Download template"
+    article-download-button-text: "download template"
     article-download-explanation: "Open file with Peakboard Designer"
-    article-overview-title: "Overview"
+    article-overview-title: "overview"
     article-overview-description-title: "Description"
     article-overview-benefits-title: "Benefits"
     article-overview-data-sources-title: "Data Sources"
-    article-related-templates-title: "Related Templates"
-    homepage-top-section-title: "Peakboard Templates"
+    article-related-templates-title: "related templates"
+    homepage-top-section-title: "peakboard templates"
     homepage-top-section-content: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Here you will find some templates with a short description, which you can download directly and use for your purposes."
-    homepage-carousel-button-text: "Learn more"
+    homepage-carousel-button-text: "learn more"
     homepage-featured-category: "Recommended"
     homepage-all-category: "All"
-    homepage-menu-title-category: "Categories"
+    homepage-menu-title-category: "categories"
     homepage-menu-title-data-sources: "Data Sources"
     homepage-visible-categories: ["Administration","Andon","KPI","Lean Management","Logistics","OEE","Production","Scripting","Reception","Interaction", "Edge", "Shopfloor"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Get started for free!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    page-top-overview-text: "Template Overview"
+    page-top-overview-text: "template overview"
     footer-support: "Support"
     footer-support-tel: "Tel:"
     footer-support-email: "E-Mail:"
@@ -74,16 +74,16 @@ language:
     cta-link: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "Download the Peakboard Designer for free"
   de:
-    article-download-button-text: "Template herunterladen"
+    article-download-button-text: "template herunterladen"
     article-download-explanation: "Datei mit Peakboard Designer öffnen"
-    article-overview-title: "Overview"
+    article-overview-title: "overview"
     article-overview-description-title: "Description"
     article-overview-benefits-title: "Benefits"
     article-overview-data-sources-title: "Data Sources"
-    article-related-templates-title: "Ähnliche Templates"
-    homepage-top-section-title: "Peakboard Templates"
+    article-related-templates-title: "ähnliche Templates"
+    homepage-top-section-title: "peakboard templates"
     homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Hier finden Sie einige Vorlagen mit einer kurzen Beschreibung, welche Sie direkt herunterladen und für Ihre Zwecke verwenden können."
-    homepage-carousel-button-text: "Mehr erfahren"
+    homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-category: "Empfohlen"
     homepage-all-category: "Alle"
     homepage-menu-title-category: "Kategorien"
