Write small all the things

--- a/_config.yml
+++ b/_config.yml
@@ -48,14 +48,14 @@ language:
     top-menu-cta-button-text: "Get started for free!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "template overview"
-    footer-support: "Support"
-    footer-support-tel: "Tel:"
-    footer-support-email: "E-Mail:"
-    footer-contact: "Contact"
-    footer-contact-email: "E-Mail:"
-    footer-contact-website: "Website:"
+    footer-support: "support"
+    footer-support-tel: "tel:"
+    footer-support-email: "e-mail:"
+    footer-contact: "contact"
+    footer-contact-email: "e-mail:"
+    footer-contact-website: "website:"
     footer-copyright: "All rights are reserved."
-    footer-github: "Github"
+    footer-github: "github"
     footer-github-text: "View this page in Github"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
     footer-legal: "Legal Information"
@@ -69,10 +69,10 @@ language:
     cookie-alert-link-text: "Read more"
     cookie-alert-link: "https://peakboard.com/en/privacy-policy/"
     cta-title: "EXPERIENCE THE PEAKBOARD DESIGNER"
-    cta-subtitle: "Make your individual visualization"
+    cta-subtitle: "make your individual visualization"
     cta-content: "Create different visualizations for production, logistics, IT and many other areas with the Peakboard Designer. Peakboard allows you to display all relevant information, KPI’s and processes at a glance and in real time."
     cta-link: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    cta-link-text: "Download the Peakboard Designer for free"
+    cta-link-text: "download the Peakboard Designer for free"
   de:
     article-download-button-text: "template herunterladen"
     article-download-explanation: "Datei mit Peakboard Designer öffnen"
@@ -93,14 +93,14 @@ language:
     top-menu-cta-button-text: "Kostenlos starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Übersichtsseite"
-    footer-support: "Support"
-    footer-support-tel: "Tel:"
-    footer-support-email: "E-Mail:"
-    footer-contact: "Kontakt"
-    footer-contact-email: "E-Mail:"
-    footer-contact-website: "Website:"
+    footer-support: "support"
+    footer-support-tel: "tel:"
+    footer-support-email: "e-mail:"
+    footer-contact: "kontakt"
+    footer-contact-email: "e-mail:"
+    footer-contact-website: "website:"
     footer-copyright: "Alle Rechte vorbehalten."
-    footer-github: "Github"
+    footer-github: "github"
     footer-github-text: "Seite in Github öffnen"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
     footer-legal: "Impressum"
@@ -114,7 +114,7 @@ language:
     cookie-alert-link-text: "Mehr erfahren"
     cookie-alert-link: "https://peakboard.com/datenschutzerklaerung/"
     cta-title: "ENTDECKEN SIE DEN PEAKBOARD DESIGNER"
-    cta-subtitle: "Erstellen Sie Ihre individuelle Visualisierung"
+    cta-subtitle: "erstellen Sie Ihre individuelle Visualisierung"
     cta-content: "Mit dem Peakboard Designer erstellen Sie in kürzester Zeit ganz unterschiedliche Visualisierungen für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bilden Sie alle für Sie relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
     cta-link: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "Peakboard Designer kostenlos herunterladen"
