--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ language:
     article-overview-description-title: "Description"
     article-overview-benefits-title: "Benefits"
     article-overview-data-sources-title: "Data Sources"
-    article-related-templates-title: "ähnliche Templates"
+    article-related-templates-title: "ähnliche templates"
     homepage-top-section-title: "peakboard templates"
-    homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Hier finden Sie einige Vorlagen mit einer kurzen Beschreibung, welche Sie direkt herunterladen und für Ihre Zwecke verwenden können."
+    homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Hier findest du einige Vorlagen mit einer kurzen Beschreibung, welche du direkt herunterladen und für deine Zwecke verwenden kannst."
     homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-category: "empfohlen"
     homepage-all-category: "alle"
@@ -99,23 +99,23 @@ language:
     footer-contact: "kontakt"
     footer-contact-email: "e-mail:"
     footer-contact-website: "website:"
-    footer-copyright: "Alle Rechte vorbehalten."
+    footer-copyright: "alle rechte vorbehalten."
     footer-github: "github"
-    footer-github-text: "Seite in Github öffnen"
+    footer-github-text: "seite in github öffnen"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
-    footer-legal: "Impressum"
+    footer-legal: "impressum"
     footer-legal-url: "https://peakboard.com/legal-notice/"
     search-title: "Peakboard Suche"
     search-results: "Ergebnisse"
     search-no-results: "Wir haben leider nichts gefunden: "
     search-bar-placeholder: "Suchen"
-    cookie-alert-message: "Um sicherzustellen, dass Sie das beste Nutzungserlebnis auf unserer Webseite erfahren, werden Cookies verwendet."
+    cookie-alert-message: "Um sicherzustellen, dass du das beste Nutzungserlebnis auf unserer Webseite erfährst, werden Cookies verwendet."
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Mehr erfahren"
     cookie-alert-link: "https://peakboard.com/datenschutzerklaerung/"
-    cta-title: "ENTDECKEN SIE DEN PEAKBOARD DESIGNER"
-    cta-subtitle: "erstellen Sie Ihre individuelle Visualisierung"
-    cta-content: "Mit dem Peakboard Designer erstellen Sie in kürzester Zeit ganz unterschiedliche Visualisierungen für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bilden Sie alle für Sie relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
+    cta-title: "ENTDECKE DEN PEAKBOARD DESIGNER"
+    cta-subtitle: "erstelle deine individuelle visualisierung"
+    cta-content: "Mit dem Peakboard Designer erstellst du in kürzester Zeit ganz unterschiedliche Visualisierungen für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bildest du alle relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
     cta-link: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "Peakboard Designer kostenlos herunterladen"
   cn:
