write search and suche klein as well

--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ language:
     search-title: "Peakboard Search"
     search-results: "Results"
     search-no-results: "We didn't find any results for the search: "
-    search-bar-placeholder: "Search"
+    search-bar-placeholder: "search"
     cookie-alert-message: "This website uses cookies to ensure you get the best experience on our website."
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Read more"
@@ -105,10 +105,10 @@ language:
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
     footer-legal: "impressum"
     footer-legal-url: "https://peakboard.com/legal-notice/"
-    search-title: "Peakboard Suche"
-    search-results: "Ergebnisse"
+    search-title: "Peakboard suche"
+    search-results: "ergebnisse"
     search-no-results: "Wir haben leider nichts gefunden: "
-    search-bar-placeholder: "Suchen"
+    search-bar-placeholder: "suchen"
     cookie-alert-message: "Um sicherzustellen, dass du das beste Nutzungserlebnis auf unserer Webseite erfährst, werden Cookies verwendet."
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Mehr erfahren"
