--- a/_config.yml
+++ b/_config.yml
@@ -69,8 +69,8 @@ language:
     cookie-alert-link-text: "Read more"
     cookie-alert-link: "https://peakboard.com/en/privacy-policy/"
     cta-title: "EXPERIENCE THE PEAKBOARD DESIGNER"
-    cta-subtitle: "make your individual visualization"
-    cta-content: "Create different visualizations for production, logistics, IT and many other areas with the Peakboard Designer. Peakboard allows you to display all relevant information, KPI’s and processes at a glance and in real time."
+    cta-subtitle: "create your individual visualization"
+    cta-content: "Design different visualizations for production, logistics, IT and many other areas with the Peakboard Designer. Peakboard allows you to display all relevant information, KPI’s and processes at a glance and in real time."
     cta-link: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "download the Peakboard Designer for free"
   de:
