PB Templates als eigenname

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ language:
     article-overview-benefits-title: "Benefits"
     article-overview-data-sources-title: "Data Sources"
     article-related-templates-title: "related templates"
-    homepage-top-section-title: "peakboard templates"
+    homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Here you will find some templates with a short description, which you can download directly and use for your purposes."
     homepage-carousel-button-text: "learn more"
     homepage-featured-category: "recommended"
@@ -90,7 +90,7 @@ language:
     article-overview-benefits-title: "Benefits"
     article-overview-data-sources-title: "Data Sources"
     article-related-templates-title: "ähnliche templates"
-    homepage-top-section-title: "peakboard templates"
+    homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Hier findest du einige Vorlagen mit einer kurzen Beschreibung, welche du direkt herunterladen und für deine Zwecke verwenden kannst."
     homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-category: "empfohlen"
