--- a/_config.yml
+++ b/_config.yml
@@ -178,18 +178,18 @@ language:
     cta-content: "使用Peakboard-Designer，无论是采用实时图块、语音命令还是经典图表，您都可以快速创建多种仪表盘，实时显示相关信息。方便快捷，一目了然。它可用于生产、仓储物流、IT或是分销部门。"
     cta-link: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "免费下载Peakboard Designer"
-    cookie-box-title: "Delicious, cookies!"
-    cookie-box-explanation: "We use cookies to constantly improve our website and to show you relevant content. By using our website, you agree to this."
-    cookie-box-link-privacy-policy: "View our Privacy Policy"
-    cookie-box-button-accept: "Accept All"
-    cookie-box-button-change: "Change Privacy Preferences"
-    cookie-box-change-preferences-title: "Privacy Preferences"
-    cookie-box-change-preferences-explanation: "Here you will find an overview of all cookies used. You can give your consent to whole categories or display further information and select certain cookies."
-    cookie-box-change-preferences-section-essential: "Essential (1)"
-    cookie-box-change-preferences-section-essential-explanation: "Essential cookies enable basic functions and are necessary for the proper functioning of the website."
-    cookie-box-change-preferences-section-statistics: "Statistics (1)"
-    cookie-box-change-preferences-section-statistics-explanation: "Statistics Cookies collect information anonymously. This information helps us to understand how our visitors use our website."
-    cookie-box-change-preferences-button-save: "Save Preferences"
+    cookie-box-title: "Cookies，美味可口!"
+      cookie-box-explanation: "我们使用Cookies持续提高网站体验，向您展示相关内容。使用本网站表明您同意我们的Cookies政策。"
+      cookie-box-link-privacy-policy: "隐私权政策"
+      cookie-box-button-accept: "同意所有"
+      cookie-box-button-change: "更改隐私首选项"
+      cookie-box-change-preferences-title: "隐私偏好"
+      cookie-box-change-preferences-explanation: "您可在此查看网站使用的所有Cookies概览。您可同意所有相关设置，或者点击显示更多信息，然后勾选某些Cookies。"
+      cookie-box-change-preferences-section-essential: "必要类 (1)"
+      cookie-box-change-preferences-section-essential-explanation: "此类Cookies用于确保基本功能，为网站正常运行所必需。"
+      cookie-box-change-preferences-section-statistics: "统计类 (1)"
+      cookie-box-change-preferences-section-statistics-explanation: "此类Cookies会收集匿名信息，能帮助我们了解访客如何使用本网站。"
+      cookie-box-change-preferences-button-save: "保存偏好"
 algolia:
   application_id: 'XEVVIEZWKI'
   index_name: PEAKBOARD_EPIC_BOARDS
