add jekyll-seo-tag plugin

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-sitemap
-
+  - jekyll-seo
 collections:
   templates:
     output: true
