Remove duplicate title entry on pages

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-sitemap
-  - jekyll-seo
+  - jekyll-seo-tag
 collections:
   templates:
     output: true
