--- a/_config.yml
+++ b/_config.yml
@@ -65,11 +65,17 @@ language:
     search-results: "Results"
     search-no-results: "We didn't find any results for the search: "
     search-bar-placeholder: "search"
-    cta-title: "EXPERIENCE THE PEAKBOARD DESIGNER"
-    cta-subtitle: "create your individual visualization"
-    cta-content: "Design different visualizations for production, logistics, IT and many other areas with the Peakboard Designer. Peakboard allows you to display all relevant information, KPI’s and processes at a glance and in real time."
-    cta-link: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    cta-link-text: "download the Peakboard Designer for free"
+    cta-title: "Do you need more support?"
+    cta-subtitle: "Be enlightened!"
+    cta-column-one-link: "https://www.youtube.com/channel/UC2PzOvzOGg4XtKNr2OFOofA"
+    cta-column-one-link-text: "Visit our YouTube channel"
+    cta-column-one-text: "Our numerous videos for beginners and advanced users explain exactly how to design your dashboard."
+    cta-column-two-link: "https://help.peakboard.com/en/"
+    cta-column-two-link-text: "Visit the Peakboard Help website"
+    cta-column-two-text: "Check out numerous articles that will help you use the Peakboard Designer."
+    cta-column-three-link: "https://peakboard.com/en/"
+    cta-column-three-link-text: "Visit www.peakboard.com"
+    cta-column-three-text: "Find out all about Peakboard and browse our different use cases and success stories."
     cookie-box-title: "Delicious, cookies!"
     cookie-box-explanation: "We use cookies to constantly improve our website and to show you relevant content. By using our website, you agree to this."
     cookie-box-link-privacy-policy: "View our Privacy Policy"
@@ -119,11 +125,17 @@ language:
     search-results: "ergebnisse"
     search-no-results: "Wir haben leider nichts gefunden: "
     search-bar-placeholder: "suchen"
-    cta-title: "ENTDECKE DEN PEAKBOARD DESIGNER"
-    cta-subtitle: "erstelle deine individuelle visualisierung"
-    cta-content: "Mit dem Peakboard Designer erstellst du in kürzester Zeit ganz unterschiedliche Visualisierungen für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bildest du alle relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
-    cta-link: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    cta-link-text: "Peakboard Designer kostenlos herunterladen"
+    cta-title: "Du benötigst weitere unterstützung?"
+    cta-subtitle: "Lass dich erleuchten!"
+    cta-column-one-link: "https://www.youtube.com/channel/UC2PzOvzOGg4XtKNr2OFOofA"
+    cta-column-one-link-text: "Zum YouTube Kanal"
+    cta-column-one-text: "Unsere zahlreichen Videos für Einsteiger und Fortgeschrittene erklären dir genau, wie du dein Dashboard gestaltest."
+    cta-column-two-link: "https://help.peakboard.com"
+    cta-column-two-link-text: "Zur Peakboard Helpsite"
+    cta-column-two-text: "Hier gibt es zahlreiche Artikel, die dir den Umgang mit dem Peakboard Designer vereinfachen."
+    cta-column-three-link: "https://peakboard.com"
+    cta-column-three-link-text: "Zu www.peakboard.com"
+    cta-column-three-text: "Auf unserer Website findest du alle wichtigen Infos zu Peakboard sowie verschiedene Anwendungsfälle und Success Stories."
     cookie-box-title: "Lecker, cookies!"
     cookie-box-explanation: "Wir verwenden Cookies, um unsere Website stetig zu verbessern und um dir relevante Inhalte zu zeigen. Durch die Nutzung der Website stimmst du dem zu."
     cookie-box-link-privacy-policy: "Datenschutzerklärung"
@@ -173,11 +185,17 @@ language:
     search-results: "搜索结果"
     search-no-results: "未找到相关搜索结果： "
     search-bar-placeholder: "搜索"
-    cta-title: "立即试用Peakboard-Designer!"
-    cta-subtitle: "下载Peakboard-Designer，在最短的时间内为每个部门定制仪表盘。"
-    cta-content: "使用Peakboard-Designer，无论是采用实时图块、语音命令还是经典图表，您都可以快速创建多种仪表盘，实时显示相关信息。方便快捷，一目了然。它可用于生产、仓储物流、IT或是分销部门。"
-    cta-link: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    cta-link-text: "免费下载Peakboard Designer"
+    cta-title: "需要更多支持?"
+    cta-subtitle: "其他资源"
+    cta-column-one-link: "https://v.qq.com/s/videoplus/1721428022"
+    cta-column-one-link-text: "访问腾讯视频"
+    cta-column-one-text: "海量视频为您讲解如何设计看板，新手和高级用户同样适宜。"
+    cta-column-two-link: "https://help.peakboard.com/cn/"
+    cta-column-two-link-text: "查看Peakboard帮助"
+    cta-column-two-text: "查看诸多文档，帮助您使用Peakboard Designer。"
+    cta-column-three-link: "https://peakboard.cn"
+    cta-column-three-link-text: "浏览www.peakboard.cn"
+    cta-column-three-text: "深入了解Peakboard，浏览产品不同的使用场景和客户成功案例。"
     cookie-box-title: "Cookies，美味可口!"
     cookie-box-explanation: "我们使用Cookies持续提高网站体验，向您展示相关内容。使用本网站表明您同意我们的Cookies政策。"
     cookie-box-link-privacy-policy: "隐私权政策"
