--- a/_config.yml
+++ b/_config.yml
@@ -70,10 +70,10 @@ language:
     cta-column-one-link: "https://www.youtube.com/channel/UC2PzOvzOGg4XtKNr2OFOofA"
     cta-column-one-link-text: "Visit our YouTube channel"
     cta-column-one-text: "Our numerous videos for beginners and advanced users explain exactly how to design your dashboard."
-    cta-column-two-link: "https://help.peakboard.com/en/"
+    cta-column-two-link: "https://help.peakboard.com/en/?utm_medium=website_info_box&utm_campaign=templates"
     cta-column-two-link-text: "Visit the Peakboard Help website"
     cta-column-two-text: "Check out numerous articles that will help you use the Peakboard Designer."
-    cta-column-three-link: "https://peakboard.com/en/"
+    cta-column-three-link: "https://peakboard.com/en/?utm_medium=website_info_box&utm_campaign=templates"
     cta-column-three-link-text: "Visit www.peakboard.com"
     cta-column-three-text: "Find out all about Peakboard and browse our different use cases and success stories."
     cookie-box-title: "Delicious, cookies!"
@@ -130,10 +130,10 @@ language:
     cta-column-one-link: "https://www.youtube.com/channel/UC2PzOvzOGg4XtKNr2OFOofA"
     cta-column-one-link-text: "Zum YouTube Kanal"
     cta-column-one-text: "Unsere zahlreichen Videos für Einsteiger und Fortgeschrittene erklären dir genau, wie du dein Dashboard gestaltest."
-    cta-column-two-link: "https://help.peakboard.com"
+    cta-column-two-link: "https://help.peakboard.com/?utm_medium=website_info_box&utm_campaign=templates"
     cta-column-two-link-text: "Zur Peakboard Helpsite"
     cta-column-two-text: "Hier gibt es zahlreiche Artikel, die dir den Umgang mit dem Peakboard Designer vereinfachen."
-    cta-column-three-link: "https://peakboard.com"
+    cta-column-three-link: "https://peakboard.com/?utm_medium=website_info_box&utm_campaign=templates"
     cta-column-three-link-text: "Zu www.peakboard.com"
     cta-column-three-text: "Auf unserer Website findest du alle wichtigen Infos zu Peakboard sowie verschiedene Anwendungsfälle und Success Stories."
     cookie-box-title: "Lecker, cookies!"
@@ -190,10 +190,10 @@ language:
     cta-column-one-link: "https://v.qq.com/s/videoplus/1721428022"
     cta-column-one-link-text: "访问腾讯视频"
     cta-column-one-text: "海量视频为您讲解如何设计看板，新手和高级用户同样适宜。"
-    cta-column-two-link: "https://help.peakboard.com/cn/"
+    cta-column-two-link: "https://help.peakboard.com/cn/?utm_medium=website_info_box&utm_campaign=templates"
     cta-column-two-link-text: "查看Peakboard帮助"
     cta-column-two-text: "查看诸多文档，帮助您使用Peakboard Designer。"
-    cta-column-three-link: "https://peakboard.cn"
+    cta-column-three-link: "https://peakboard.cn/?utm_medium=website_info_box&utm_campaign=templates"
     cta-column-three-link-text: "浏览www.peakboard.cn"
     cta-column-three-text: "深入了解Peakboard，浏览产品不同的使用场景和客户成功案例。"
     cookie-box-title: "Cookies，美味可口!"
