Updated titles and descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Peakboard Templates – Get inspired"
+title: "Peakboard Templates – Examples for every use case"
 email:  support@peakboard.com
-description: "Templates for your Peakboard. Get more out of your Peakboard experience by using one of our awesome templates."
+description: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Here you will find some templates with a short description, which you can download directly and and customize for your purposes."
 url: "https://templates.peakboard.com"
 twitter_username: pkbrd
 github_username:  Peakboard
@@ -37,7 +37,7 @@ language:
     article-overview-data-sources-title: "Data Sources"
     article-related-templates-title: "related templates"
     homepage-top-section-title: "Peakboard Templates"
-    homepage-top-section-content: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Here you will find some templates with a short description, which you can download directly and use for your purposes."
+    homepage-top-section-content: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Here you will find some templates with a short description, which you can download directly and and customize for your purposes."
     homepage-carousel-button-text: "learn more"
     homepage-featured-category: "recommended"
     homepage-all-category: "all"
