--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ language:
     homepage-all-category: "all"
     homepage-menu-title-category: "categories"
     homepage-menu-title-data-sources: "Data Sources"
-    homepage-visible-categories: ["administration","andon","kpi","lean management","logistics","oee","production","scripting","reception","interaction", "edge", "shopfloor"]
+    homepage-visible-categories: ["administration","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "edge", "shopfloor"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "get started for free!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
@@ -103,7 +103,7 @@ language:
     homepage-all-category: "alle"
     homepage-menu-title-category: "Kategorien"
     homepage-menu-title-data-sources: "Datenquellen"
-    homepage-visible-categories: ["administration","andon","empfang","kpi","lean management","logistik","oee / gae","produktion","scripting","interaktion", "edge", "shopfloor"]
+    homepage-visible-categories: ["administration","andon","kpi","lean management","logistik","oee / gae","produktion","scripting","interaktion", "edge", "shopfloor"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "kostenlos starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
@@ -163,7 +163,7 @@ language:
     homepage-all-category: "全部"
     homepage-menu-title-category: "类别"
     homepage-menu-title-data-sources: "数据源"
-    homepage-visible-categories: ["administration","andon","kpi","lean management","logistics","oee","production","scripting","reception","interaction", "edge", "shopfloor"]
+    homepage-visible-categories: ["administration","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "edge", "shopfloor"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "马上开始"
     top-menu-cta-button-url: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
