--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ language:
     cookie-box-change-preferences-section-statistics-explanation: "Statistics Cookies collect information anonymously. This information helps us to understand how our visitors use our website."
     cookie-box-change-preferences-button-save: "Save Preferences"
     extensions-link-text-return-to-overview: "Gallery / Extensions"
-    extensions-link-text-download: "Download extension"
+    extensions-link-text-download: "download extension"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
     extensions-link-text-how-to: "How to install a Peakboard Extension"
     extensions-section-description: "Description"
@@ -161,7 +161,7 @@ language:
     extensions-link-text-return-to-overview: "Gallery / Extensions"
     extensions-link-text-download: "extension herunterladen"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/de-Extension.html"
-    extensions-link-text-how-to: "How to install a Peakboard Extension"
+    extensions-link-text-how-to: "So installierst du eine Peakboard Extension"
     extensions-section-description: "Beschreibung"
     extensions-section-version-history: "Version History"
     extensions-section-screenshots: "Screenshots"
