--- a/_config.yml
+++ b/_config.yml
@@ -167,16 +167,16 @@ language:
     extensions-section-screenshots: "Screenshots"
   cn:
     article-download-button-text: "下载模板"
-    article-download-explanation: "Open file with Peakboard Designer"
-    article-overview-title: "Overview"
-    article-overview-description-title: "Description"
+    article-download-explanation: "使用Peakboard Designer打开文件"
+    article-overview-title: "概览"
+    article-overview-description-title: "描述"
     article-overview-benefits-title: "Benefits"
-    article-overview-data-sources-title: "Data Sources"
-    article-related-templates-title: "Related Templates"
+    article-overview-data-sources-title: "数据源"
+    article-related-templates-title: "相关模版"
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
     homepage-carousel-button-text: "了解更多"
-    homepage-featured-category: "recommended"
+    homepage-featured-category: "推荐"
     homepage-all-category: "全部"
     homepage-menu-title-category: "类别"
     homepage-menu-title-data-sources: "数据源"
@@ -197,7 +197,7 @@ language:
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
     footer-legal: "法律信息"
     footer-legal-url: "https://peakboard.com/en/legal-notice/"
-    footer-privacy: "Privacy Policy"
+    footer-privacy: "隐私政策"
     search-title: "Peakboard搜索"
     search-results: "搜索结果"
     search-no-results: "未找到相关搜索结果： "
@@ -225,13 +225,13 @@ language:
     cookie-box-change-preferences-section-statistics: "统计类 (1)"
     cookie-box-change-preferences-section-statistics-explanation: "此类Cookies会收集匿名信息，能帮助我们了解访客如何使用本网站。"
     cookie-box-change-preferences-button-save: "保存偏好"
-    extensions-link-text-return-to-overview: "Gallery / Extensions"
-    extensions-link-text-download: "Download extension"
+    extensions-link-text-return-to-overview: "图库 / 拓件"
+    extensions-link-text-download: "下载拓件"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
-    extensions-link-text-how-to: "How to install a Peakboard Extension"
-    extensions-section-description: "Description"
-    extensions-section-version-history: "Version History"
-    extensions-section-screenshots: "Screenshots"
+    extensions-link-text-how-to: "如何安装Peakboard拓件"
+    extensions-section-description: "描述"
+    extensions-section-version-history: "版本历史"
+    extensions-section-screenshots: "截图"
 algolia:
   application_id: 'XEVVIEZWKI'
   index_name: PEAKBOARD_EPIC_BOARDS
