Two tags refined.

--- a/_config.yml
+++ b/_config.yml
@@ -188,8 +188,8 @@ language:
     footer-support: "技术支持"
     footer-support-tel: "电话："
     footer-support-email: "邮箱："
-    footer-contact: "联系方式"
-    footer-contact-email: "电话："
+    footer-contact: "联系我们"
+    footer-contact-email: "邮箱："
     footer-contact-website: "网站："
     footer-copyright: "版权所有，保留所有权利"
     footer-github: "Github"
