--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,12 @@ language:
     article-related-templates-title: "related templates"
     homepage-top-section-title: "Peakboard Gallery"
     homepage-top-section-content: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Our Templates and Extensions will help you make their implementation with the Peakboard Designer as easy as possible."
+    homepage-top-section-templates: "Templates"
+    homepage-top-section-templates-text: "Are you missing the inspiration you need? Our templates will help you get started with your Peakboard project. Simply download them for free and customize them according to your ideas."
+    homepage-top-section-templates-button: "see all"
+    homepage-top-section-extensions: "Extensions"
+    homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
+    homepage-top-section-extensions-button: "see all"
     homepage-carousel-button-text: "learn more"
     homepage-featured-templates: "recommended"
     homepage-all-templates: "all"
@@ -109,6 +115,12 @@ language:
     article-related-templates-title: "ähnliche templates"
     homepage-top-section-title: "Peakboard Gallery"
     homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Hier findest du einige Vorlagen mit einer kurzen Beschreibung, welche du direkt herunterladen und für deine Zwecke verwenden kannst."
+    homepage-top-section-templates: "Templates"
+    homepage-top-section-templates-text: "Are you missing the inspiration you need? Our templates will help you get started with your Peakboard project. Simply download them for free and customize them according to your ideas."
+    homepage-top-section-templates-button: "see all"
+    homepage-top-section-extensions: "Extensions"
+    homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
+    homepage-top-section-extensions-button: "see all"
     homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-templates: "empfohlen"
     homepage-all-templates: "alle"
@@ -177,6 +189,12 @@ language:
     article-related-templates-title: "相关模版"
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
+    homepage-top-section-templates: "Templates"
+    homepage-top-section-templates-text: "Are you missing the inspiration you need? Our templates will help you get started with your Peakboard project. Simply download them for free and customize them according to your ideas."
+    homepage-top-section-templates-button: "see all"
+    homepage-top-section-extensions: "Extensions"
+    homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
+    homepage-top-section-extensions-button: "see all"
     homepage-carousel-button-text: "了解更多"
     homepage-featured-templates: "推荐"
     homepage-all-templates: "全部"
