--- a/_config.yml
+++ b/_config.yml
@@ -114,12 +114,12 @@ language:
     article-overview-data-sources-title: "Data Sources"
     article-related-templates-title: "ähnliche templates"
     homepage-top-section-title: "Peakboard Gallery"
-    homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Hier findest du einige Vorlagen mit einer kurzen Beschreibung, welche du direkt herunterladen und für deine Zwecke verwenden kannst."
+    homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Um dir ihre Umsetzung mit dem Peakboard Designer so einfach wie möglich zu machen, helfen dir unsere Templates und Erweiterungen."
     homepage-top-section-templates: "Templates"
-    homepage-top-section-templates-text: "Are you missing the inspiration you need? Our templates will help you get started with your Peakboard project. Simply download them for free and customize them according to your ideas."
+    homepage-top-section-templates-text: "Dir fehlt die nötige Inspiration? Unsere Templates erleichtern dir den Einstieg in dein Peakboard Projekt. Einfach kostenlos herunterladen und ganz nach deinen Vorstellungen individualisieren."
     homepage-top-section-templates-button: "see all"
     homepage-top-section-extensions: "Extensions"
-    homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
+    homepage-top-section-extensions-text: "Peakboard bietet eine Vielzahl von Schnittstellen für die verschiedensten Datenquellen. Sollte deine Datenquelle noch nicht dabei sein, helfen dir unsere Erweiterungen weiter."
     homepage-top-section-extensions-button: "see all"
     homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-templates: "empfohlen"
