--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ language:
     homepage-visible-extensions: ["all","crm"]
     top-menu-cta-button-text: "get started for free!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    page-top-overview-text: "Gallery / Templates"
+    page-top-overview-text: "< Gallery / Templates"
     footer-support: "support"
     footer-support-tel: "tel:"
     footer-support-email: "e-mail:"
