--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ language:
     cookie-box-change-preferences-section-statistics: "Statistics (1)"
     cookie-box-change-preferences-section-statistics-explanation: "Statistics Cookies collect information anonymously. This information helps us to understand how our visitors use our website."
     cookie-box-change-preferences-button-save: "Save Preferences"
-    extensions-link-text-return-to-overview: "Gallery / Extensions"
+    extensions-link-text-return-to-overview: "< Gallery / Extensions"
     extensions-link-text-download: "download extension"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
     extensions-link-text-how-to: "How to install a Peakboard Extension"
@@ -131,7 +131,7 @@ language:
     homepage-visible-extensions: ["alle","crm"]
     top-menu-cta-button-text: "kostenlos starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    page-top-overview-text: "Gallery / Templates"
+    page-top-overview-text: "< Gallery / Templates"
     footer-support: "support"
     footer-support-tel: "tel:"
     footer-support-email: "e-mail:"
@@ -172,7 +172,7 @@ language:
     cookie-box-change-preferences-section-statistics: "Statistiken (1)"
     cookie-box-change-preferences-section-statistics-explanation: "Statistik Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen."
     cookie-box-change-preferences-button-save: "Speichern"
-    extensions-link-text-return-to-overview: "Gallery / Extensions"
+    extensions-link-text-return-to-overview: "< Gallery / Extensions"
     extensions-link-text-download: "extension herunterladen"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/de-Extension.html"
     extensions-link-text-how-to: "So installierst du eine Peakboard Extension"
@@ -205,7 +205,7 @@ language:
     homepage-visible-extensions: ["all","crm"]
     top-menu-cta-button-text: "马上开始"
     top-menu-cta-button-url: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    page-top-overview-text: "Gallery / Templates"
+    page-top-overview-text: "< Gallery / Templates"
     footer-support: "技术支持"
     footer-support-tel: "电话："
     footer-support-email: "邮箱："
@@ -246,7 +246,7 @@ language:
     cookie-box-change-preferences-section-statistics: "统计类 (1)"
     cookie-box-change-preferences-section-statistics-explanation: "此类Cookies会收集匿名信息，能帮助我们了解访客如何使用本网站。"
     cookie-box-change-preferences-button-save: "保存偏好"
-    extensions-link-text-return-to-overview: "图库 / 拓件"
+    extensions-link-text-return-to-overview: "< 图库 / 拓件"
     extensions-link-text-download: "下载拓件"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
     extensions-link-text-how-to: "如何安装Peakboard拓件"
