--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ language:
     cookie-box-change-preferences-section-statistics: "Statistics (1)"
     cookie-box-change-preferences-section-statistics-explanation: "Statistics Cookies collect information anonymously. This information helps us to understand how our visitors use our website."
     cookie-box-change-preferences-button-save: "Save Preferences"
-    extensions-link-text-return-to-overview: "< Gallery / Extensions"
+    extensions-link-text-return-to-overview: "Gallery / Extensions"
     extensions-link-text-download: "download extension"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
     extensions-link-text-how-to: "How to install a Peakboard Extension"
@@ -172,7 +172,7 @@ language:
     cookie-box-change-preferences-section-statistics: "Statistiken (1)"
     cookie-box-change-preferences-section-statistics-explanation: "Statistik Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen."
     cookie-box-change-preferences-button-save: "Speichern"
-    extensions-link-text-return-to-overview: "< Gallery / Extensions"
+    extensions-link-text-return-to-overview: "Gallery / Extensions"
     extensions-link-text-download: "extension herunterladen"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/de-Extension.html"
     extensions-link-text-how-to: "So installierst du eine Peakboard Extension"
@@ -246,7 +246,7 @@ language:
     cookie-box-change-preferences-section-statistics: "统计类 (1)"
     cookie-box-change-preferences-section-statistics-explanation: "此类Cookies会收集匿名信息，能帮助我们了解访客如何使用本网站。"
     cookie-box-change-preferences-button-save: "保存偏好"
-    extensions-link-text-return-to-overview: "< 图库 / 拓件"
+    extensions-link-text-return-to-overview: "图库 / 拓件"
     extensions-link-text-download: "下载拓件"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
     extensions-link-text-how-to: "如何安装Peakboard拓件"
