--- a/_config.yml
+++ b/_config.yml
@@ -187,14 +187,14 @@ language:
     article-overview-benefits-title: "Benefits"
     article-overview-data-sources-title: "数据源"
     article-related-templates-title: "相关模版"
-    homepage-top-section-title: "获取帮助"
-    homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
-    homepage-top-section-templates: "Templates"
-    homepage-top-section-templates-text: "Are you missing the inspiration you need? Our templates will help you get started with your Peakboard project. Simply download them for free and customize them according to your ideas."
-    homepage-top-section-templates-button: "see all"
-    homepage-top-section-extensions: "Extensions"
-    homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
-    homepage-top-section-extensions-button: "see all"
+    homepage-top-section-title: "Peakboard 图库"
+    homepage-top-section-content: "Peakboard非常灵活，可广泛地应用在各种领域。产品的部署均需配合Peakboard Designer软件来完成，我们提供的模板和拓件能帮助您尽可能地简化这一过程。"
+    homepage-top-section-templates: "模板"
+    homepage-top-section-templates-text: "还在为找不到灵感而苦恼？我们的模板可帮助您快速上手Peakboard项目！只需下载模板，然后根据自己的想法进行个性化调整即可，完全免费。"
+    homepage-top-section-templates-button: "查看所有"
+    homepage-top-section-extensions: "拓件"
+    homepage-top-section-extensions-text: "Peakboard提供各种各样的数据源接口。如果您需要的数据源暂未列出，可以试试拓件。"
+    homepage-top-section-extensions-button: "查看所有"
     homepage-carousel-button-text: "了解更多"
     homepage-featured-templates: "推荐"
     homepage-all-templates: "全部"
@@ -205,7 +205,7 @@ language:
     homepage-visible-extensions: ["all","crm"]
     top-menu-cta-button-text: "马上开始"
     top-menu-cta-button-url: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    page-top-overview-text: "< Gallery / Templates"
+    page-top-overview-text: "< 图库/模板"
     footer-support: "技术支持"
     footer-support-tel: "电话："
     footer-support-email: "邮箱："
