--- a/_config.yml
+++ b/_config.yml
@@ -201,7 +201,7 @@ language:
     homepage-all-extensions: "全部"
     homepage-menu-title-templates: "类别"
     homepage-menu-title-extensions: "数据源"
-    homepage-visible-templates: ["all","recommended","administration","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "edge", "shopfloor"]
+    homepage-visible-templates: ["所有","推荐","行政管理","安东板","KPI","精益管理","仓储物流","OEE","生产制造","编程脚本","人机交互", "Edge设备", "车间一线"]
     homepage-visible-extensions: ["all","crm"]
     top-menu-cta-button-text: "马上开始"
     top-menu-cta-button-url: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
