German Translation Buttons

--- a/_config.yml
+++ b/_config.yml
@@ -117,10 +117,10 @@ language:
     homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Um dir ihre Umsetzung mit dem Peakboard Designer so einfach wie möglich zu machen, helfen dir unsere Templates und Erweiterungen."
     homepage-top-section-templates: "Templates"
     homepage-top-section-templates-text: "Dir fehlt die nötige Inspiration? Unsere Templates erleichtern dir den Einstieg in dein Peakboard Projekt. Einfach kostenlos herunterladen und ganz nach deinen Vorstellungen individualisieren."
-    homepage-top-section-templates-button: "see all"
+    homepage-top-section-templates-button: "alle templates"
     homepage-top-section-extensions: "Extensions"
     homepage-top-section-extensions-text: "Peakboard bietet eine Vielzahl von Schnittstellen für die verschiedensten Datenquellen. Sollte deine Datenquelle noch nicht dabei sein, helfen dir unsere Erweiterungen weiter."
-    homepage-top-section-extensions-button: "see all"
+    homepage-top-section-extensions-button: "alle extensions"
     homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-templates: "empfohlen"
     homepage-all-templates: "alle"
