add text to comnfig

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ language:
     homepage-top-section-templates-button: "see all"
     homepage-top-section-extensions: "Extensions"
     homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
-    homepage-top-section-extensions-button: "see all"
+    homepage-top-section-extensions-button: "coming soon"
     homepage-carousel-button-text: "learn more"
     homepage-featured-templates: "recommended"
     homepage-all-templates: "all"
