headline texts changed

--- a/_config.yml
+++ b/_config.yml
@@ -41,18 +41,18 @@ language:
     article-related-templates-title: "related templates"
     homepage-top-section-title: "Peakboard Gallery"
     homepage-top-section-content: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Our Templates and Extensions will help you make their implementation with the Peakboard Designer as easy as possible."
-    homepage-top-section-templates: "Templates"
+    homepage-top-section-templates: "Peakboard Templates"
     homepage-top-section-templates-text: "Are you missing the inspiration you need? Our templates will help you get started with your Peakboard project. Simply download them for free and customize them according to your ideas."
     homepage-top-section-templates-button: "see all"
-    homepage-top-section-extensions: "Extensions"
+    homepage-top-section-extensions: "Peakboard Extensions"
     homepage-top-section-extensions-text: "Peakboard offers a wide range of interfaces for various data sources. If your data source is not yet included, our extensions will help you."
     homepage-top-section-extensions-button: "coming soon"
     homepage-carousel-button-text: "learn more"
     homepage-featured-templates: "recommended"
     homepage-all-templates: "all"
     homepage-all-extensions: "all"
-    homepage-menu-title-templates: "Templates"
-    homepage-menu-title-extensions: "Extensions"
+    homepage-menu-title-templates: "Peakboard Templates"
+    homepage-menu-title-extensions: "Peakboard Extensions"
     homepage-visible-templates: ["all","recommended","administration","andon","kpi","lean management","logistics","oee","production","scripting","interaction", "edge", "shopfloor"]
     homepage-visible-extensions: ["all","crm"]
     top-menu-cta-button-text: "get started for free!"
