--- a/_config.yml
+++ b/_config.yml
@@ -115,18 +115,18 @@ language:
     article-related-templates-title: "ähnliche templates"
     homepage-top-section-title: "Peakboard Gallery"
     homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Um dir ihre Umsetzung mit dem Peakboard Designer so einfach wie möglich zu machen, helfen dir unsere Templates und Erweiterungen."
-    homepage-top-section-templates: "Templates"
+    homepage-top-section-templates: "Peakboard Templates"
     homepage-top-section-templates-text: "Dir fehlt die nötige Inspiration? Unsere Templates erleichtern dir den Einstieg in dein Peakboard Projekt. Einfach kostenlos herunterladen und ganz nach deinen Vorstellungen individualisieren."
     homepage-top-section-templates-button: "alle templates"
-    homepage-top-section-extensions: "Extensions"
+    homepage-top-section-extensions: "Peakboard Extensions"
     homepage-top-section-extensions-text: "Peakboard bietet eine Vielzahl von Schnittstellen für die verschiedensten Datenquellen. Sollte deine Datenquelle noch nicht dabei sein, helfen dir unsere Erweiterungen weiter."
     homepage-top-section-extensions-button: "alle extensions"
     homepage-carousel-button-text: "mehr erfahren"
     homepage-featured-templates: "empfohlen"
     homepage-all-templates: "alle"
     homepage-all-extensions: "alle"
-    homepage-menu-title-templates: "Templates"
-    homepage-menu-title-extensions: "Extensions"
+    homepage-menu-title-templates: "Peakboard Templates"
+    homepage-menu-title-extensions: "Peakboard Extensions"
     homepage-visible-templates: ["alle","empfohlen","administration","andon","kpi","lean management","logistik","oee / gae","produktion","scripting","interaktion", "edge", "shopfloor"]
     homepage-visible-extensions: ["alle","crm"]
     top-menu-cta-button-text: "kostenlos starten!"
