put extensions live

--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,7 @@ language:
     extensions-link-text-download: "download extension"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
     extensions-link-text-how-to: "How to install a Peakboard Extension"
+    extensions-link-text-source-code: "View the source code"
     extensions-section-description: "Description"
     extensions-section-version-history: "Version History"
     extensions-section-screenshots: "Screenshots"
@@ -176,6 +177,7 @@ language:
     extensions-link-text-download: "extension herunterladen"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/de-Extension.html"
     extensions-link-text-how-to: "So installierst du eine Peakboard Extension"
+    extensions-link-text-source-code: "View the source code"
     extensions-section-description: "Beschreibung"
     extensions-section-version-history: "Versionshistorie"
     extensions-section-screenshots: "Screenshots"
@@ -250,6 +252,7 @@ language:
     extensions-link-text-download: "下载拓件"
     extensions-link-how-to: "https://help.peakboard.com/data_sources/Extension/en-ManageExtension.html"
     extensions-link-text-how-to: "如何安装Peakboard拓件"
+    extensions-link-text-source-code: "View the source code"
     extensions-section-description: "描述"
     extensions-section-version-history: "版本历史"
     extensions-section-screenshots: "截图"
